crates/keron-lang/tests/corpus/errors/parse/reconcile_chain_missing_head.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: unexpected `>`, expected expression
  --> 2:12
  |
2 | reconcile -> a
  |            ^
